Changed the MMT to be a downloaded dependency
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@57764 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,21 @@
 buildscript {
 
 	repositories {
-		flatDir {
-			dirs 'mmt'
-		}
-		mavenCentral()		
+		mavenCentral()
+        maven {
+            url alfrescoMavenUrl
+        }
 	}
 
 	dependencies {
-		classpath fileTree(dir: 'mmt', include: '*.jar')
+        //MMT dependencies
+        classpath('org.alfresco:alfresco-mmt:4.2.d-beta') {
+            transitive = true
+        }
+        classpath 'de.schlichtherle.truezip:truezip-kernel:7.5.5'
+        classpath 'de.schlichtherle.truezip:truezip-swing:7.5.5'
+
+        //YUI
 	    classpath 'com.yahoo.platform.yui:yuicompressor:2.4.6'
 	}
 }
