--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get.properties
@@ -5,5 +5,4 @@ title.single=File Transfer {0} Report to...
 button.file=File Report
 message.no-files=At least one file must be supplied
 message.please-wait=Transfer Report being filed...
-message.success=Successfully filed Transfer Report as {0} 
-message.failure=The File operation could not be completed
+label.unfiled-records=File transfer report to 'Unfiled Records'
