RM-1099 (Refactor Transfer and Accession reports)  * Refactored file transfer report dialogue so that it can be used also for other types of reports
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@58396 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -204,8 +204,8 @@ message.file-destruction-report.failure=Couldn't generate destruction report
 message.file-destruction-report.success=Destruction report generated
 message.end-retention.failure=Couldn't end retention
 message.end-retention.success=Retention ended
-message.file-transfer-success=Successfully filed transfer report as ''{0}''
-message.file-transfer-failure=The File operation could not be completed
+message.file-success=Successfully filed report as ''{0}''
+message.file-failure=The file operation could not be completed
 
 ## File Plan Status Indicators
 status.rm-accession=Accession Pending
