RM-1099 (Refactor Transfer and Accession reports)  * Report template localization  * File report dialogue refactoring
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@58441 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -204,7 +204,7 @@ message.file-destruction-report.failure=Couldn't generate destruction report
 message.file-destruction-report.success=Destruction report generated
 message.end-retention.failure=Couldn't end retention
 message.end-retention.success=Retention ended
-message.file-success=Successfully filed report as ''{0}''
+message.file-success=Successfully filed report
 message.file-failure=The file operation could not be completed
 
 ## File Plan Status Indicators
