--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -7,7 +7,7 @@
       <version>2.2-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
-   <artifactId>alfresco-rm-share</artifactId>
+   <artifactId>rm-share</artifactId>
    <name>Alfresco RM Share</name>
    <properties>
       <app.filtering.enabled>true</app.filtering.enabled>
