RM-1104 (Investigate the integrate of UI automation tests into RM build)  * Apply the amp files to the war files with alfresco maven plugin
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@58838 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -2,17 +2,13 @@
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
-      <artifactId>alfresco-rm-parent</artifactId>
       <groupId>org.alfresco</groupId>
+      <artifactId>alfresco-rm-parent</artifactId>
       <version>2.2-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
-   <artifactId>rm-share</artifactId>
+   <artifactId>alfresco-rm-share</artifactId>
    <name>Alfresco RM Share</name>
-   <properties>
-      <app.filtering.enabled>true</app.filtering.enabled>
-      <maven.alfresco.version>1.1.1</maven.alfresco.version>
-   </properties>
    <build>
       <resources>
          <resource>
@@ -37,6 +33,29 @@
             <artifactId>alfresco-maven-plugin</artifactId>
             <version>${maven.alfresco.version}</version>
             <extensions>true</extensions>
+            <configuration>
+               <backup>true</backup>
+               <ampLocation>${project.build.directory}/${project.build.finalName}.amp</ampLocation>
+               <!-- FIXME -->
+               <warLocation>${project.build.directory}/../../../software/tomcat-app/webapps/share.war</warLocation>
+            </configuration>
+         </plugin>
+         <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <configuration>
+               <overlays>
+                  <overlay>
+                     <groupId>org.alfresco</groupId>
+                     <artifactId>share</artifactId>
+                     <type>war</type>
+                  </overlay>
+                  <overlay>
+                     <groupId>org.alfresco</groupId>
+                     <artifactId>alfresco-rm-share</artifactId>
+                     <type>amp</type>
+                  </overlay>
+               </overlays>
+            </configuration>
          </plugin>
       </plugins>
    </build>
@@ -53,10 +72,16 @@
          <classifier>classes</classifier>
          <exclusions>
             <exclusion>
-               <artifactId>alfresco-web-framework-commons</artifactId>
                <groupId>org.alfresco</groupId>
+               <artifactId>alfresco-web-framework-commons</artifactId>
             </exclusion>
          </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>org.alfresco</groupId>
+         <artifactId>share</artifactId>
+         <version>${alfresco.base.version}</version>
+         <type>war</type>
       </dependency>
       <dependency>
          <groupId>org.alfresco</groupId>
