RM-1104 (Investigate the integrate of UI automation tests into RM build)  * Apply the amp files to the war files with alfresco maven plugin
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@58844 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
 
    <properties>
       <alfresco.base.version>4.2.0</alfresco.base.version>
+      <app.filtering.enabled>true</app.filtering.enabled>
 
       <!-- Database properties - default values to be overridden in settings.xml -->
       <db.driver>org.postgresql.Driver</db.driver>
