--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -91,10 +91,9 @@
          <type>war</type>
       </dependency>
       <dependency>
-         <groupId>org.alfresco</groupId>
-         <artifactId>webdrone</artifactId>
-         <version>2.0</version>
-         <scope>test</scope>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-beans</artifactId>
+         <version>3.1.1.RELEASE</version>
       </dependency>
       <dependency>
          <groupId>org.alfresco</groupId>
