RM-1107 (Mavenization of the RM build)  * Minification of js files
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@58966 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -53,6 +53,30 @@
                </overlays>
             </configuration>
          </plugin>
+         <plugin>
+            <groupId>net.alchim31.maven</groupId>
+            <artifactId>yuicompressor-maven-plugin</artifactId>
+            <version>1.3.2</version>
+            <executions>
+               <execution>
+                  <id>minimize-slingshot-javascript</id>
+                  <goals>
+                     <goal>compress</goal>
+                  </goals>
+                  <phase>prepare-package</phase>
+               </execution>
+            </executions>
+            <configuration>
+               <jswarn>false</jswarn>
+               <encoding>UTF-8</encoding>
+               <includes>
+                  <include>**/*.js</include>
+               </includes>
+               <sourceDirectory>${project.build.directory}/${project.build.finalName}/web</sourceDirectory>
+               <outputDirectory>${project.build.directory}/${project.build.finalName}/web</outputDirectory>
+               <excludeResources>true</excludeResources>
+            </configuration>
+         </plugin>
       </plugins>
    </build>
    <dependencies>
