--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -114,5 +114,12 @@
          <version>2.1-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.alfresco</groupId>
+         <artifactId>share-po</artifactId>
+         <version>2.1-SNAPSHOT</version>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 </project>
