RM-1107 (Mavenization of the RM build)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@59097 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/build.xml
+++ b/rm-share/build.xml
@@ -3,4 +3,6 @@
    <property name="artifactId" value="share"/>
    <property name="tomcat" value="tomcat-app" />
    <import file="../build.xml"/>
+
+   <target name="prepareEnv" depends="updateClassPath" description="" />
 </project>
