RM-1104 (Investigate the integrate of UI automation tests into RM build)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@59098 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/test/resources/share.properties
+++ b/rm-share/test/resources/share.properties
@@ -1,4 +1,4 @@
-share.target=http://127.0.0.1:8080/share
+share.target=http://localhost:8081/share
 share.version=Enterprise42
 download.directory=C:\\DownloadAlfresco\\
 webdrone.target=http://127.0.0.1:8080/share
