RM-1107 (Mavenization of the RM build)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@59178 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -24,11 +24,9 @@
       <resources>
          <resource>
             <directory>config</directory>
-            <targetPath>../${project.build.finalName}/config</targetPath>
          </resource>
          <resource>
             <directory>source/web</directory>
-            <targetPath>../${project.build.finalName}/web</targetPath>
          </resource>
       </resources>
       <plugins>
@@ -36,12 +34,21 @@
             <artifactId>maven-antrun-plugin</artifactId>
             <executions>
                <execution>
-                  <phase>test</phase>
+                  <phase>prepare-package</phase>
                   <goals>
                      <goal>run</goal>
                   </goals>
                   <configuration>
                      <tasks>
+                        <move todir="${project.build.directory}/${project.build.finalName}/config/alfresco">
+                           <fileset dir="${project.build.outputDirectory}/alfresco"/>
+                        </move>
+                        <move todir="${project.build.directory}/${project.build.finalName}/web/components">
+                           <fileset dir="${project.build.outputDirectory}/components"/>
+                        </move>
+                        <move todir="${project.build.directory}/${project.build.finalName}/web/rm">
+                           <fileset dir="${project.build.outputDirectory}/rm"/>
+                        </move>
                         <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/file-mapping.properties"
                               todir="${project.build.directory}/${project.build.finalName}"/>
                         <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/module.properties"
