--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -8,7 +8,7 @@
       <version>2.2-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
-   <artifactId>alfresco-rm-share</artifactId>
+   <artifactId>alfresco-rm-share-test</artifactId>
    <name>Alfresco RM Share</name>
    <properties>
       <spring.version>3.1.1.RELEASE</spring.version>
