RM-1107 (Mavenization of the RM build)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@59184 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,23 @@
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.8</version>
+               <executions>
+                  <execution>
+                     <id>attach-distribution</id>
+                     <phase>package</phase>
+                     <goals>
+                        <goal>attach-artifact</goal>
+                     </goals>
+                     <configuration>
+                        <artifacts>
+                           <artifact>
+                              <file>${project.build.directory}/${project.build.finalName}.amp</file>
+                              <type>amp</type>
+                           </artifact>
+                        </artifacts>
+                     </configuration>
+                  </execution>
+               </executions>
             </plugin>
             <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
