--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -31,6 +31,27 @@
       </resources>
       <plugins>
          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>attach-distribution</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>attach-artifact</goal>
+                  </goals>
+                  <configuration>
+                     <artifacts>
+                        <artifact>
+                           <file>${project.build.directory}/${project.build.finalName}.amp</file>
+                           <type>amp</type>
+                        </artifact>
+                     </artifacts>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
             <executions>
                <execution>
