RM-1107 (Mavenization of the RM build)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@59209 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -45,6 +45,7 @@
                         <artifact>
                            <file>${project.build.directory}/${project.build.finalName}.amp</file>
                            <type>amp</type>
+                           <classifier>amp</classifier>
                         </artifact>
                      </artifacts>
                   </configuration>
