--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,10 @@
                </configuration>
             </plugin>
             <plugin>
+               <artifactId>maven-surefire-plugin-report</artifactId>
+               <version>2.16</version>
+            </plugin>
+            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
             </plugin>
